feat: reload command fix: few bugs refactor: variable names